[gd_scene load_steps=3 format=3 uid="uid://boywxuhfg8sh5"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_y3qq4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwh5c"]
bg_color = Color(0.6, 0.0627451, 0.298039, 1)

[node name="MainMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gwh5c")
script = ExtResource("1_y3qq4")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -49.0
offset_right = -13.0
offset_bottom = -26.0
grow_horizontal = 0
grow_vertical = 2
text = "Alfred
the
Dipping Bird"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -71.0
offset_right = 96.0
offset_bottom = 70.0
grow_vertical = 2

[node name="Play" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Play"

[node name="LevelSelect" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Level Select"

[node name="Options" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Options"

[node name="Credits" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Credits"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Quit"

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
